--- a/index.html
+++ b/index.html
@@ -1,16 +1,92 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
+<head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Sistema de Sugestão de Compra" />
-    <title>Sistema de Sugestão de Compra</title>
+    <title>Sistema de Sugestão de Compras</title>
     <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body>
-    <noscript>Você precisa habilitar JavaScript para executar esta aplicação.</noscript>
-    <div id="root"></div>
-  </body>
+</head>
+<body class="bg-gray-100 min-h-screen">
+    <div class="container mx-auto px-4 py-8">
+        <!-- Header -->
+        <header class="text-center mb-12">
+            <h1 class="text-4xl font-bold text-gray-800 mb-4">Sistema de Sugestão de Compras</h1>
+            <p class="text-lg text-gray-600">Análise inteligente de Excel para otimização de compras</p>
+        </header>
+
+        <!-- Main Content -->
+        <main class="max-w-4xl mx-auto">
+            <!-- Status Card -->
+            <div class="bg-white rounded-lg shadow-lg p-8 mb-8">
+                <div class="flex items-center mb-6">
+                    <div class="bg-blue-100 p-3 rounded-full mr-4">
+                        <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
+                        </svg>
+                    </div>
+                    <div>
+                        <h2 class="text-2xl font-semibold text-gray-800">Sistema em Desenvolvimento</h2>
+                        <p class="text-gray-600">Versão Beta - Funcionalidades sendo implementadas</p>
+                    </div>
+                </div>
+                
+                <div class="border-l-4 border-blue-400 bg-blue-50 p-4 rounded">
+                    <p class="text-blue-800">
+                        <strong>Em breve:</strong> Upload de planilhas Excel, análise automática de dados de compras e geração de relatórios inteligentes.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Features Preview -->
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 mb-8">
+                <div class="bg-white p-6 rounded-lg shadow">
+                    <div class="text-green-600 mb-3">
+                        <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
+                        </svg>
+                    </div>
+                    <h3 class="text-lg font-semibold mb-2">Análise de Dados</h3>
+                    <p class="text-gray-600">Processamento automático de planilhas Excel com análise inteligente de padrões de compra.</p>
+                </div>
+
+                <div class="bg-white p-6 rounded-lg shadow">
+                    <div class="text-blue-600 mb-3">
+                        <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+                        </svg>
+                    </div>
+                    <h3 class="text-lg font-semibold mb-2">Sugestões Inteligentes</h3>
+                    <p class="text-gray-600">Algoritmos avançados para sugerir as melhores oportunidades de compra baseadas no histórico.</p>
+                </div>
+
+                <div class="bg-white p-6 rounded-lg shadow">
+                    <div class="text-purple-600 mb-3">
+                        <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 17v-2m3 2v-4m3 4v-6m2 10H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
+                        </svg>
+                    </div>
+                    <h3 class="text-lg font-semibold mb-2">Relatórios Detalhados</h3>
+                    <p class="text-gray-600">Geração de relatórios completos com insights acionáveis para otimizar suas compras.</p>
+                </div>
+            </div>
+
+            <!-- Contact Info -->
+            <div class="bg-gradient-to-r from-blue-500 to-purple-600 text-white p-8 rounded-lg text-center">
+                <h3 class="text-xl font-semibold mb-2">Projeto em Construção</h3>
+                <p class="mb-4">Este sistema está sendo desenvolvido para otimizar processos de compra através de análise de dados.</p>
+                <div class="text-blue-100">
+                    <p>Desenvolvido com ❤️ para análise de compras inteligente</p>
+                </div>
+            </div>
+        </main>
+
+        <!-- Footer -->
+        <footer class="text-center mt-12 text-gray-500">
+            <p>&copy; 2025 Sistema de Sugestão de Compras - Em desenvolvimento</p>
+        </footer>
+    </div>
+</body>
 </html>
